# PluginDemo

./: .gitignore  CMakeLists.txt  PluginDemo.pro  README.md  main.cpp  resources.qrc
android/: AndroidManifest.xml  build.gradle  google-services.json
ios/: GoogleService-Info.plist  Project-Info.plist
ios/Amplitude.framework/: Amplitude  Info.plist
ios/AppAuth.framework/: AppAuth  Info.plist
ios/FBSDKCoreKit.framework/: Info.plist
ios/FBSDKLoginKit.framework/: Info.plist
ios/FirebaseAnalytics.framework/: FirebaseAnalytics
ios/FirebaseAuth.framework/: Info.plist
ios/FirebaseCore.framework/: FirebaseCore  Info.plist
ios/FirebaseCoreDiagnostics.framework/: FirebaseCoreDiagnostics  Info.plist
ios/FirebaseDatabase.framework/: Info.plist
ios/FirebaseInstallations.framework/: FirebaseInstallations  Info.plist
ios/FirebaseStorage.framework/: FirebaseStorage  Info.plist
ios/GTMAppAuth.framework/: GTMAppAuth  Info.plist
ios/GTMSessionFetcher.framework/: GTMSessionFetcher  Info.plist
ios/GoogleDataTransport.framework/: GoogleDataTransport  Info.plist
ios/GoogleDataTransportCCTSupport.framework/: GoogleDataTransportCCTSupport
ios/GoogleUtilities.framework/: GoogleUtilities
ios/PromisesObjC.framework/: PromisesObjC
ios/UserMessagingPlatform.framework/: UserMessagingPlatform
ios/leveldb-library.framework/: leveldb-library
ios/nanopb.framework/: nanopb
qml/: AdMobPage.qml  ChartboostPage.qml  Constants.qml  FacebookPage.qml  FlurryPage.qml  GoogleAnalyticsPage.qml  HockeyAppPage.qml  LocalNotificationPage.qml  Main.qml  OneSignalPage.qml  ParsePage.qml  PluginMainItem.qml  SoomlaPage.qml  config.json
qml/helper/: CallToAction.qml  Constants.qml  PluginListItem.qml  SectionContent.qml  SectionDescription.qml  SectionHeader.qml
qml/pages/: AdMobPage.qml  (+12 more)
(+7 files in other folders)
